remove attributes from start project

--- a/final/src/index.html
+++ b/final/src/index.html
@@ -22,8 +22,7 @@
     }
   </style>
 </head>
-<body style="
-">
+<body>
     <div class="showcase-container">
         <cc-button primary="true"></cc-button>
     </div>
