--- a/start/src/index.html
+++ b/start/src/index.html
@@ -22,14 +22,13 @@
     }
   </style>
 </head>
-<body style="
-">
+<body>
     <div class="showcase-container">
-        <cc-button primary="true"></cc-button>
+        <cc-button></cc-button>
     </div>
 
     <div class="showcase-container">
-      <cc-button primary="false"></cc-button>
+      <cc-button></cc-button>
     </div>
 
     <div class="showcase-container">
@@ -41,7 +40,7 @@
     </div>
 
     <div class="showcase-container">
-      <cc-rating event="die Campus Conference"></cc-rating>
+      <cc-rating></cc-rating>
     </div>
 </body>
 </html>
